swagger ui 5 methods
