# docs/swagger.json
@@ -134,6 +134,60 @@
                 }
             }
         },
+        "/api/milk_requests": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Получить список запросов на молоко с возможностью фильтрации по статусу и датам",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "milk_requests"
+                ],
+                "summary": "Получить все заявки на молочную кухню с параметрами",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Статус заявки",
+                        "name": "status",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Наличие статуса",
+                        "name": "is_status",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.GetAllMilkRequestsWithParamsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.ResponseMessage"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.ResponseMessage"
+                        }
+                    }
+                }
+            }
+        },
         "/api/register_user": {
             "post": {
                 "description": "Registers a new user.",
@@ -214,6 +268,78 @@
                 }
             }
         },
+        "ds.MilkRequests": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "creator": {
+                    "$ref": "#/definitions/ds.Users"
+                },
+                "creator_id": {
+                    "type": "integer"
+                },
+                "date_create": {
+                    "type": "string"
+                },
+                "date_finish": {
+                    "type": "string"
+                },
+                "date_update": {
+                    "type": "string"
+                },
+                "delivery_date": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "moderator": {
+                    "$ref": "#/definitions/ds.Users"
+                },
+                "moderator_id": {
+                    "type": "integer"
+                },
+                "recipient_name": {
+                    "type": "string"
+                },
+                "recipient_surname": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
+        "ds.Users": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "is_moderator": {
+                    "type": "boolean"
+                },
+                "login": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "schemas.GetAllMilkRequestsWithParamsResponse": {
+            "type": "object",
+            "properties": {
+                "milkRequests": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/ds.MilkRequests"
+                    }
+                }
+            }
+        },
         "schemas.GetMealResponse": {
             "type": "object",
             "properties": {
@@ -246,6 +372,13 @@
         },
         "schemas.ResponseMessage": {
             "type": "object"
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
